<resources>
    <string name="app_name">Street Sk8</string>
    <string name="new_game">Play Now</string>
    <string name="how_to_play">How 2 Play</string>
    <string name="scores">High Scores</string>
    <string name="practice">Practice</string>
    <string name="rank">Rank: </string>
    <string name="name">     Level: </string>
    <string name="score">    Score: </string>
    <string name="blankSpace"> </string>
    <string name="difficulty">Game Difficulty: </string>
    <string name="easy">easy</string>
    <string name="normal">normal</string>
    <string name="hard">hard</string>
    <string name="sound">Toggle Sounds: </string>

    <string name="instructions"> Game Instructions: </string>
</resources>
