<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/less_opaque_bkg">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:weightSum="6">

        <TextView
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_weight="2.5"
        android:textSize="30dp"
        android:text="@string/name"
        android:id="@+id/logName"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="2.5"
            android:textSize="30dp"
            android:text="@string/score"
            android:id="@+id/logScore"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textSize="25dp"
        android:text="@string/blankSpace"
        android:id="@+id/logWins"/>
</LinearLayout>