<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgrounda"
    >
    <ImageButton
        android:id="@+id/options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:src="@drawable/ic_settings_black_24dp"
        android:background="@color/colorTrans"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|bottom"
        android:paddingBottom="20dp"
        android:orientation="horizontal"
        android:weightSum="16"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="15dp"
        android:layout_marginEnd="15dp">
        <Button
            android:id="@+id/new_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_game"
            android:textSize="25dp"
            android:layout_weight="3"
            android:background="@color/colorTrans"
            />
        <Button
            android:id="@+id/practice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/practice"
            android:textSize="25dp"
            android:layout_weight="3"
            android:background="@color/colorTrans"
            />
        <Button
            android:id="@+id/instructions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/how_to_play"
            android:textSize="25dp"
            android:layout_weight="3"
            android:background="@color/colorTrans"
            />
    <!--    <Button
            android:layout_weight="3"
            android:id="@+id/scores"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:text="@string/scores"
            android:background="@color/colorTrans"
            />
    -->


    </LinearLayout>
</RelativeLayout>
